fix logo size issue that was breaking the page on firefox. added a current status icon. developers can now initiate a build quickly by typing the package name in the input field on the bottom of the sidebar.

--- a/static/css/skin-blue.css
+++ b/static/css/skin-blue.css
@@ -1283,6 +1283,7 @@ body.animated #cl-wrapper {
   position: relative;
   vertical-align: top;
   padding-bottom: 200px;
+  max-width: 280px;
 }
 #pcont {
   display: table-cell;
